--- a/updates/testing.yaml
+++ b/updates/testing.yaml
@@ -2,7 +2,7 @@
   command: "composer install chdir={{ application_folder_destination }}/mod/filetransport"
 - name: "Activate filetransport plugin"
   shell:
-    cmd: "php vendor/bin/elgg-cli plugins:activate -- filetransport"
+    cmd: "php vendor/bin/elgg-cli plugins:activate filetransport"
     chdir: "{{ application_folder_destination }}"
 - name: "Put wabue plugin at the end of the plugin ist"
   tags:
