fix: Refresh plugin list after installing plugin (requires Elgg >= 3.3.5)

--- a/tasks/install_module.yaml
+++ b/tasks/install_module.yaml
@@ -25,3 +25,7 @@
     - "uncheckable"
   command: "mv {{ module['rename_from'] }} {{ module['rename_to'] }} chdir={{ application_folder_destination }}/mod"
   when: "module['rename_from'] is defined and module['rename_to'] is defined"
+- name "{{ module['mod'] }} - Refresh plugins"
+  tags:
+    - "uncheckable"
+  command: "php vendor/bin/elgg-cli plugin:list -r chdir={{ application_folder_destination }}"
