fix: Fix paths in php serialization

--- a/playbook.yaml
+++ b/playbook.yaml
@@ -47,8 +47,12 @@
       command: "sed -i -re 's#s:{{ url_source|length }}:{{ url_source }}#s:{{ url_destination|length }}:{{ url_destination }}#gi' {{ local_tempdir.path }}/database.sql warn=no"
     - name: "Fix URL"
       command: "sed -i -re 's#{{ url_source }}#{{ url_destination }}#gi' {{ local_tempdir.path }}/database.sql warn=no"
+    - name: "Fix data path in php serialization"
+      command: "sed -i -re 's#s:{{ data_folder_source|length }}:{{ data_folder_source }}#s:{{ data_folder_destination|length }}:{{ data_folder_destination }}#gi' {{ local_tempdir.path }}/database.sql warn=no"
     - name: "Fix data path"
       command: "sed -i -re 's#{{ data_folder_source }}#{{ data_folder_destination }}#gi' {{ local_tempdir.path }}/database.sql warn=no"
+    - name: "Fix application path in php serialization"
+      command: "sed -i -re 's#s:{{ application_folder_source|length }}:{{ application_folder_source }}#s:{{ application_folder_destination|length }}:{{ application_folder_destination }}#gi' {{ local_tempdir.path }}/database.sql warn=no"
     - name: "Fix application path"
       command: "sed -i -re 's#{{ application_folder_source }}#{{ application_folder_destination }}#gi' {{ local_tempdir.path }}/database.sql warn=no"
     - name: "Remove create db line"
