--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "localdev"]
 	path = localdev
-	url = https://github.com/wabuehamm/web.members.git
+	url = https://github.com/wabuehamm/elgg-localdev.git
