--- a/playbook.yaml
+++ b/playbook.yaml
@@ -44,21 +44,21 @@
   tasks:
     # Uses sed command instead of replace because auf https://github.com/ansible/ansible/issues/64353
     - name: "Fix URL in php serialization"
-      command: "sed -i -re 's#s:{{ url_source|length }}:{{ url_source }}#s:{{ url_destination|length }}:{{ url_destination }}#gi' {{ local_tempdir.path }}/database.sql warn=no"
+      command: "sed -i -re 's#s:{{ url_source|length }}:{{ url_source }}#s:{{ url_destination|length }}:{{ url_destination }}#gi' {{ local_tempdir.path }}/database.s"
     - name: "Fix URL"
-      command: "sed -i -re 's#{{ url_source }}#{{ url_destination }}#gi' {{ local_tempdir.path }}/database.sql warn=no"
+      command: "sed -i -re 's#{{ url_source }}#{{ url_destination }}#gi' {{ local_tempdir.path }}/database.s"
     - name: "Fix data path in php serialization"
-      command: "sed -i -re 's#s:{{ data_folder_source|length }}:{{ data_folder_source }}#s:{{ data_folder_destination|length }}:{{ data_folder_destination }}#gi' {{ local_tempdir.path }}/database.sql warn=no"
+      command: "sed -i -re 's#s:{{ data_folder_source|length }}:{{ data_folder_source }}#s:{{ data_folder_destination|length }}:{{ data_folder_destination }}#gi' {{ local_tempdir.path }}/database.s"
     - name: "Fix data path"
-      command: "sed -i -re 's#{{ data_folder_source }}#{{ data_folder_destination }}#gi' {{ local_tempdir.path }}/database.sql warn=no"
+      command: "sed -i -re 's#{{ data_folder_source }}#{{ data_folder_destination }}#gi' {{ local_tempdir.path }}/database.s"
     - name: "Fix application path in php serialization"
-      command: "sed -i -re 's#s:{{ application_folder_source|length }}:{{ application_folder_source }}#s:{{ application_folder_destination|length }}:{{ application_folder_destination }}#gi' {{ local_tempdir.path }}/database.sql warn=no"
+      command: "sed -i -re 's#s:{{ application_folder_source|length }}:{{ application_folder_source }}#s:{{ application_folder_destination|length }}:{{ application_folder_destination }}#gi' {{ local_tempdir.path }}/database.s"
     - name: "Fix application path"
-      command: "sed -i -re 's#{{ application_folder_source }}#{{ application_folder_destination }}#gi' {{ local_tempdir.path }}/database.sql warn=no"
+      command: "sed -i -re 's#{{ application_folder_source }}#{{ application_folder_destination }}#gi' {{ local_tempdir.path }}/database.s"
     - name: "Remove create db line"
-      command: "sed -i -re '/CREATE DATABASE.*/d' {{ local_tempdir.path }}/database.sql warn=no"
+      command: "sed -i -re '/CREATE DATABASE.*/d' {{ local_tempdir.path }}/database.s"
     - name: "Remove use db line"
-      command: "sed -i -re '/USE `.*/d' {{ local_tempdir.path }}/database.sql warn=no"
+      command: "sed -i -re '/USE `.*/d' {{ local_tempdir.path }}/database.sql"
 
 - name: "Restore dump"
   tags:
@@ -152,7 +152,7 @@
         src: "{{ hostvars['ansible_master']['local_tempdir'].path }}/application.tar.bz2"
         dest: "{{ remote_tempdir.path }}"
     - name: "Empty application folder"
-      shell: "rm -rf * .htaccess chdir={{ application_folder_destination }} warn=no"
+      shell: "rm -rf * .htaccess chdir={{ application_folder_destination }}"
     - name: "Unarchive application archive"
       tags:
         - "uncheckable"
@@ -255,7 +255,7 @@
         src: "{{ hostvars['ansible_master']['local_tempdir'].path }}/data.tar.bz2"
         dest: "{{ remote_tempdir.path }}"
     - name: "Empty data folder"
-      shell: "rm -rf * chdir={{ data_folder_destination }} warn=no"
+      shell: "rm -rf * chdir={{ data_folder_destination }}"
     - name: "Unarchive data archive"
       tags:
         - "uncheckable"
