--- a/playbook.yaml
+++ b/playbook.yaml
@@ -44,19 +44,19 @@
   tasks:
     # Uses sed command instead of replace because auf https://github.com/ansible/ansible/issues/64353
     - name: "Fix URL in php serialization"
-      command: "sed -i -re 's#s:{{ url_source|length }}:{{ url_source }}#s:{{ url_destination|length }}:{{ url_destination }}#gi' {{ local_tempdir.path }}/database.s"
+      command: "sed -i -re 's#s:{{ url_source|length }}:{{ url_source }}#s:{{ url_destination|length }}:{{ url_destination }}#gi' {{ local_tempdir.path }}/database.sql"
     - name: "Fix URL"
-      command: "sed -i -re 's#{{ url_source }}#{{ url_destination }}#gi' {{ local_tempdir.path }}/database.s"
+      command: "sed -i -re 's#{{ url_source }}#{{ url_destination }}#gi' {{ local_tempdir.path }}/database.sql"
     - name: "Fix data path in php serialization"
-      command: "sed -i -re 's#s:{{ data_folder_source|length }}:{{ data_folder_source }}#s:{{ data_folder_destination|length }}:{{ data_folder_destination }}#gi' {{ local_tempdir.path }}/database.s"
+      command: "sed -i -re 's#s:{{ data_folder_source|length }}:{{ data_folder_source }}#s:{{ data_folder_destination|length }}:{{ data_folder_destination }}#gi' {{ local_tempdir.path }}/database.sql"
     - name: "Fix data path"
-      command: "sed -i -re 's#{{ data_folder_source }}#{{ data_folder_destination }}#gi' {{ local_tempdir.path }}/database.s"
+      command: "sed -i -re 's#{{ data_folder_source }}#{{ data_folder_destination }}#gi' {{ local_tempdir.path }}/database.sql"
     - name: "Fix application path in php serialization"
-      command: "sed -i -re 's#s:{{ application_folder_source|length }}:{{ application_folder_source }}#s:{{ application_folder_destination|length }}:{{ application_folder_destination }}#gi' {{ local_tempdir.path }}/database.s"
+      command: "sed -i -re 's#s:{{ application_folder_source|length }}:{{ application_folder_source }}#s:{{ application_folder_destination|length }}:{{ application_folder_destination }}#gi' {{ local_tempdir.path }}/database.sql"
     - name: "Fix application path"
-      command: "sed -i -re 's#{{ application_folder_source }}#{{ application_folder_destination }}#gi' {{ local_tempdir.path }}/database.s"
+      command: "sed -i -re 's#{{ application_folder_source }}#{{ application_folder_destination }}#gi' {{ local_tempdir.path }}/database.sql"
     - name: "Remove create db line"
-      command: "sed -i -re '/CREATE DATABASE.*/d' {{ local_tempdir.path }}/database.s"
+      command: "sed -i -re '/CREATE DATABASE.*/d' {{ local_tempdir.path }}/database.sql"
     - name: "Remove use db line"
       command: "sed -i -re '/USE `.*/d' {{ local_tempdir.path }}/database.sql"
 
