--- a/playbook.yaml
+++ b/playbook.yaml
@@ -335,7 +335,7 @@
     - "integration"
   tasks:
     - name: "Activate filetransport plugin"
-      command: "php vendor/bin/elgg-cli plugins:activate -- filetransport chdir={{ application_folder_destination }}"
+      command: "{{ php_command }} vendor/bin/elgg-cli plugins:activate -- filetransport chdir={{ application_folder_destination }}"
 
 - name: "Configure plugins"
   hosts: application_destination
@@ -345,11 +345,11 @@
     - name: "Put wabue plugin at the end of the plugin ist"
       tags:
         - "uncheckable"
-      command: "php vendor/bin/elgg-cli wabue:prioritize chdir={{ application_folder_destination }}"
+      command: "{{ php_command }} vendor/bin/elgg-cli wabue:prioritize chdir={{ application_folder_destination }}"
     - name: "Configure plugins"
       tags:
         - "uncheckable"
-      command: "php vendor/bin/elgg-cli wabue:configure chdir={{ application_folder_destination }}"
+      command: "{{ php_command }} vendor/bin/elgg-cli wabue:configure chdir={{ application_folder_destination }}"
 
 - name: "Set announcement banner"
   hosts: application_destination
@@ -358,7 +358,7 @@
     - "integration"
   tasks:
     - name: "Set announcement banner"
-      command: "php vendor/bin/elgg-cli wabue:announcement -- '{{ announcement }}' chdir={{ application_folder_destination }}"
+      command: "{{ php_command }} vendor/bin/elgg-cli wabue:announcement -- '{{ announcement }}' chdir={{ application_folder_destination }}"
       when: announcement != ""
 
 - name: "Fix ownership"
