--- a/updates/testing.yaml
+++ b/updates/testing.yaml
@@ -2,15 +2,15 @@
   command: "composer install chdir={{ application_folder_destination }}/mod/filetransport"
 - name: "Activate filetransport plugin"
   shell:
-    cmd: "php vendor/bin/elgg-cli plugins:activate filetransport"
+    cmd: "{{ php_command }} vendor/bin/elgg-cli plugins:activate filetransport"
     chdir: "{{ application_folder_destination }}"
 - name: "Put wabue plugin at the end of the plugin ist"
   tags:
     - "uncheckable"
-  command: "php vendor/bin/elgg-cli wabue:prioritize chdir={{ application_folder_destination }}"
+  command: "{{ php_command }} vendor/bin/elgg-cli wabue:prioritize chdir={{ application_folder_destination }}"
 - name: "Configure plugins"
   tags:
     - "uncheckable"
-  command: "php vendor/bin/elgg-cli wabue:configure chdir={{ application_folder_destination }}"
+  command: "{{ php_command }} vendor/bin/elgg-cli wabue:configure chdir={{ application_folder_destination }}"
 - name: "Activate testmode"
-  command: "php vendor/bin/elgg-cli wabue:testmode -t on chdir={{ application_folder_destination }}"
+  command: "{{ php_command }} vendor/bin/elgg-cli wabue:testmode -t on chdir={{ application_folder_destination }}"
